Make sure the social connect buttons on landing page are not stuck on the bottom edge

--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -44,3 +44,6 @@
   }
 }
 
+.social {
+  margin-bottom: 2rem;
+}
